fabrique-derive/tests/ui/invalid_string_literal_in_relation.rs
use fabrique_derive::Factory;

#[derive(Factory)]
struct Anvil {
    #[fabrique(relation = "", referenced_key = "id")]
    hammer_id: u32,
    weight: u32,
}

fn main() {}